--- a/PedoFitness/app/src/main/res/layout/activity_main.xml
+++ b/PedoFitness/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="750dp"
-        android:layout_height="500dp"
-        app:srcCompat="@drawable/wave"
-        tools:layout_editor_absoluteX="-18dp"
-        tools:layout_editor_absoluteY="-128dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:indeterminateOnly="false"
+        android:progressDrawable="@drawable/custom_progress"/>
+
+    <Button
+        android:id="@+id/startProgess"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Progress"
+        android:textAllCaps="false"
+        android:layout_marginTop="16dp"/>
+
+
+</LinearLayout>
